fix responsive layout on mobile device

--- a/FrontEnd/src/css/style.css
+++ b/FrontEnd/src/css/style.css
@@ -59,6 +59,9 @@ hr {
 .sub-section {
   width: 100%;
 }
+.sub-section-footer {
+  width: 100%;
+}
 button {
   background: #041562;
   border-radius: 5px;
@@ -73,6 +76,7 @@ button {
 .sub-section > img {
   width: 75%;
 }
+
 .card-title {
   font-size: 18px;
   color: #041562;
@@ -126,7 +130,7 @@ a {
   font-weight: 400;
   color: #2b332c;
 }
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 1000px) {
   #subtitle {
     font-size: 30px;
   }
@@ -135,6 +139,34 @@ a {
   }
   .sub-section {
     text-align: center;
+  }
+  .section {
+    padding: 30px 30px 30px 30px;
+  }
+  #navbar {
+    background-color: #ffffff;
+    padding: 10px 30px 10px 30px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
+  .nav-logo {
+    font-weight: 800;
+    font-size: 30px;
+    margin-left: 0px;
+  }
+  .artikel-title {
+    font-size: 25px;
+  }
+  .logo-white {
+    font-size: 30px;
+  }
+  .inner-footer {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  footer {
+    font-size: 15px;
+    font-weight: 400;
+    margin-bottom: 0 !important;
   }
 }
 
